Library/AXL(Library)/C, C++/AXD.h

//========== Advanced API
// Verify if the signal was switched from Off to On in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// *upValue    : FALSE(0)
//             : TRUE(1)
//===============================================================================================//
DWORD    __stdcall AxdiIsPulseOn(long lModuleNo, long lOffset, DWORD *upValue);
// Verify if the signal was switched from On to Off in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// *upValue    : FALSE(0)
//             : TRUE(1)
//===============================================================================================//
DWORD    __stdcall AxdiIsPulseOff(long lModuleNo, long lOffset, DWORD *upValue);
// Verify if the signal is maintained On state during the calling time as much as count in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// lCount      : 0 ~ 0x7FFFFFFF(2147483647)
// *upValue    : FALSE(0)
//             : TRUE(1)
// lStart      : 1
//             : 0
//===============================================================================================//
DWORD    __stdcall AxdiIsOn(long lModuleNo, long lOffset, long lCount, DWORD *upValue, long lStart);
// Verify if the signal is maintained Off state during the calling time as much as count in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for input contact
// lCount      : 0 ~ 0x7FFFFFFF(2147483647)
// *upValue    : FALSE(0)
//             : TRUE(1)
// lStart      : 1(First call)
//             : 0(Repeat call)
//===============================================================================================//
DWORD    __stdcall AxdiIsOff(long lModuleNo, long lOffset, long lCount, DWORD *upValue, long lStart);
// Maintain On state during mSec set in Offset position of specified output contact module, then turns Off
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for output contact
// lCount      : 0 ~ 0x7FFFFFFF(2147483647)
// lmSec       : 1 ~ 30000
//===============================================================================================//
DWORD    __stdcall AxdoOutPulseOn(long lModuleNo, long lOffset, long lmSec);
// Maintain Off state during mSec set in Offset position of specified output contact module, then turns On
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for output contact
// lCount      : 0 ~ 0x7FFFFFFF(2147483647)
// lmSec       : 1 ~ 30000
//===============================================================================================//
DWORD    __stdcall AxdoOutPulseOff(long lModuleNo, long lOffset, long lmSec);
// Toggling by numbers and interval which are set in Offset position of specified output contact module, then afterward maintaining the original output state
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for output contact
// lInitState  : Off(0)
//             : On(1)
// lmSecOn     : 1 ~ 30000
// lmSecOff    : 1 ~ 30000
// lCount      : 1 ~ 0x7FFFFFFF(2147483647)
//             : -1
//===============================================================================================//
DWORD    __stdcall AxdoToggleStart(long lModuleNo, long lOffset, long lInitState, long lmSecOn, long lmSecOff, long lCount);
// Toggling by numbers and interval which are set in Offset position of specified output contact module, then afterward maintaining the original output state
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position for output contact
// uOnOff      : Off(0)
//             : On(1)
//===============================================================================================//
DWORD    __stdcall AxdoToggleStop(long lModuleNo, long lOffset, DWORD uOnOff);
// In disconnect cases Set output status of specified module by byte.
//===============================================================================================//
// lModuleNo   : Module number
// dwSize      : Set Byte Number(ex. RTEX-DB32 : 2, RTEX-DO32 : 4)
// dwaSetValue : Set Value(Default : Status before Disconnect)
//             : 0 --> Disconnect before Status
//             : 1 --> On
//             : 2 --> Off
//             : 3 --> User Value, (Default user value : 'Off', Changeable from 'AxdoSetNetworkErrorUserValue()'). (SIII / ML3 / ECAT only)
//===============================================================================================//
DWORD   __stdcall AxdoSetNetworkErrorAct(long lModuleNo, DWORD dwSize, DWORD* dwaSetValue);
// API function for setting user defined output value in bytes when specified output module network is broken. (SIII / ML3 / ECAT only)
//===============================================================================================//
// lModuleNo   : Module number(Support dispersion type slaves only)
// dwOffset    : Offset position by dword unit between output index, Increasing unit of byte(Designation range:0, 1, 2, 3)
// dwValue     : Output contact value(00 ~ FFH)
//             : It must be set to 'User Value' for corresponding offset by 'AxdoSetNetworkErrorAct()'
//===============================================================================================//
DWORD   __stdcall AxdoSetNetworkErrorUserValue(long lModuleNo, DWORD dwOffset, DWORD dwValue);
// Setting connection number of specified module.
DWORD   __stdcall AxdSetContactNum(long lModuleNo, DWORD dwInputNum, DWORD dwOutputNum);
// Verifying connection number of specified module.
DWORD   __stdcall AxdGetContactNum(long lModuleNo, DWORD* dwpInputNum, DWORD* dwpOutputNum);
//== API for EtherCAT.
// Output data by bit length in Offset position of specified output module
//===============================================================================================//
// lModuleNo        : Module number
// dwBitOffset      : Bit offset position by dword unit between output index
// dwDataBitLength  : Bit length of output data
// pbyData          : The pointer of output data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdoWriteOutportByBitOffset(long lModuleNo, DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Read data by bit length in Offset position of specified input module
//===============================================================================================//
// lModuleNo        : Module number
// dwBitOffset      : Bit offset position by dword unit between input index
// dwDataBitLength  : Bit length of output data
// pbyData          : The pointer of input data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdiReadInportByBitOffset(long lModuleNo, DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Read data by bit length in Offset position of specified output module
//===============================================================================================//
// lModuleNo        : Module number
// dwBitOffset      : Bit offset position by dword unit between output index
// dwDataBitLength  : Bit length of input data
// pbyData          : The pointer of input data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD   __stdcall AxdoReadOutportByBitOffset(long lModuleNo, DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
DWORD   __stdcall AxdoLinkSetOutport(long lLinkNo, long lDstModuleNo, DWORD uDstBitOffset, long lSrcModuleNo, DWORD uSrcBitOffset, DWORD uSrcDataBitLength, DWORD uSrcPortType);
DWORD   __stdcall AxdoLinkGetOutport(long lLinkNo, long *lpDstModuleNo, DWORD *upDstBitOffset, long *lpSrcModuleNo, DWORD *upSrcBitOffset, DWORD *upSrcDataBitLength, DWORD *upSrcPortType);
DWORD   __stdcall AxdoLinkResetOutport(long lLinkNo);
DWORD   __stdcall AxdoInterLockSetOutport(long lBoardNo, long lInterLockNo, long lDstModuleNo, DWORD uDstBitOffset, long lSrcModuleNo, DWORD uSrcBitOffset, DWORD uSrcPortType, DWORD uSrcCondition, DWORD uOutputMode, DWORD uOutputModeData);
DWORD   __stdcall AxdoInterLockGetOutport(long lBoardNo, long lInterLockNo, long *lpDstModuleNo, DWORD *upDstBitOffset, long *lpSrcModuleNo, DWORD *upSrcBitOffset, DWORD *upSrcPortType, DWORD *upSrcCondition, DWORD *upOutputMode, DWORD *upOutputModeData);
DWORD   __stdcall AxdoInterLockIsEnabled(long lBoardNo, long lInterLockNo, DWORD* upEnabled);
DWORD   __stdcall AxdoInterLockResetOutport(long lBoardNo, long lInterLockNo);