Library/AXL(Library)/Visual Basic(Net)/AXD.vb


'========== Advanced API =================================================================================0
' Verify if the signal was switched from Off to On in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' *upValue   : FALSE(0)
'            : TRUE(1)
'==============================================================================================='
Public Declare Function AxdiIsPulseOn Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Verify if the signal was switched from On to Off in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' *upValue    : FALSE(0)
'             : TRUE(1)
'==============================================================================================='
Public Declare Function AxdiIsPulseOff Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Verify if the signal is maintained On state during the calling time as much as count in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' lCount      : 0 ~ 0x7FFFFFFF(2147483647)
' *upValue    : FALSE(0)
'             : TRUE(1)
' lStart      : 1
'             : 0
'==============================================================================================='
Public Declare Function AxdiIsOn Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lCount As Integer, ByRef upValue As Integer, ByVal lStart As Integer) As Integer


' Verify if the signal is maintained Off state during the calling time as much as count in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for input contact
' lCount      : 0 ~ 0x7FFFFFFF(2147483647)
' *upValue    : FALSE(0)
'             : TRUE(1)
' lStart      : 1(First call)
'             : 0(Repeat call)
'==============================================================================================='
Public Declare Function AxdiIsOff Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lCount As Integer, ByRef upValue As Integer, ByVal lStart As Integer) As Integer


' Maintain On state during mSec set in Offset position of specified output contact module, then turns Off
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' lCount      : 0 ~ 0x7FFFFFFF(2147483647)
' lmSec       : 1 ~ 30000
'==============================================================================================='
Public Declare Function AxdoOutPulseOn Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lmSec As Integer) As Integer


' Maintain Off state during mSec set in Offset position of specified output contact module, then turns On
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' lCount      : 0 ~ 0x7FFFFFFF(2147483647)
' lmSec       : 1 ~ 30000
'==============================================================================================='
Public Declare Function AxdoOutPulseOff Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lmSec As Integer) As Integer


' Toggling by numbers and interval which are set in Offset position of specified output contact module, then afterward maintaining the original output state
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' lInitState  : Off(0)
'             : On(1)
' lmSecOn     : 1 ~ 30000
' lmSecOff    : 1 ~ 30000
' lCount      : 1 ~ 0x7FFFFFFF(2147483647)
'             : -1
'==============================================================================================='
Public Declare Function AxdoToggleStart Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lInitState As Integer, ByVal lmSecOn As Integer, ByVal lmSecOff As Integer, ByVal lCount As Integer) As Integer


' Toggling by numbers and interval which are set in Offset position of specified output contact module, then afterward maintaining the original output state
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position for output contact
' uOnOff      : Off(0)
'             : On(1)
'==============================================================================================='
Public Declare Function AxdoToggleStop Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uOnOff As Integer) As Integer


' In disconnect cases Set output status of specified module by byte.
'==============================================================================================='
' lModuleNo   : Module number
' dwSize      : Set Byte Number(ex. RTEX-DB32 : 2, RTEX-DO32 : 4)
' dwaSetValue : Set Value(Default : Status before Disconnect)
'             : 0 --> Disconnect before Status
'             : 1 --> On
'             : 2 --> Off
'             : 3 --> User Value, (Default user value : 'Off', Changeable from 'AxdoSetNetworkErrorUserValue()'). (SIII / ML3 / ECAT only)
'==============================================================================================='
Public Declare Function AxdoSetNetworkErrorAct Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwSize As Integer, ByRef dwaSetValue As Integer) As Integer


' API function for setting user defined output value in bytes when specified output module network is broken. (SIII / ML3 / ECAT only)
'==============================================================================================='
' lModuleNo   : Module number(Support dispersion type slaves only)
' dwOffset    : Offset position by dword unit between output index, Increasing unit of byte(Designation range:0, 1, 2, 3)
' dwValue     : Output contact value(00 ~ FFH)
'             : It must be set to 'User Value' for corresponding offset by 'AxdoSetNetworkErrorAct()'
'==============================================================================================='
Public Declare Function AxdoSetNetworkErrorUserValue Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwOffset As Integer, ByVal dwValue As Integer) As Integer


' Setting connection number of specified module.
Public Declare Function AxdSetContactNum Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwInputNum As Integer, ByVal dwOutputNum As Integer) As Integer


' Verifying connection number of specified module.
Public Declare Function AxdGetContactNum Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef dwpInputNum As Integer, ByRef dwpOutputNum As Integer) As Integer




'== API for EtherCAT.
' Output data by bit length in Offset position of specified output module
'===============================================================================================//
' lModuleNo        : Module number
' dwBitOffset      : Bit offset position by dword unit between output index
' dwDataBitLength  : Bit length of output data
' pbyData          : The pointer of output data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoWriteOutportByBitOffset Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer

' Read data by bit length in Offset position of specified input module
'===============================================================================================//
' lModuleNo        : Module number
' dwBitOffset      : Bit offset position by dword unit between input index
' dwDataBitLength  : Bit length of output data
' pbyData          : The pointer of input data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdiReadInportByBitOffset Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer

' Read data by bit length in Offset position of specified output module
'===============================================================================================//
' lModuleNo        : Module number
' dwBitOffset      : Bit offset position by dword unit between output index
' dwDataBitLength  : Bit length of input data
' pbyData          : The pointer of input data(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoReadOutportByBitOffset Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwBitOffset As Integer, ByVal dwDataBitLength As Integer, ByRef pbyData As Byte) As Integer

    Public Declare Function AxdoLinkSetOutport Lib "AXL.dll" (ByVal lLinkNo As Integer, ByVal lDstModuleNo As Integer, ByVal uDstBitOffset As Integer, ByVal lSrcModuleNo As Integer, ByVal uSrcBitOffset As Integer, ByVal uSrcDataBitLength As Integer, ByVal uSrcPortType As Integer) As Integer
    Public Declare Function AxdoLinkGetOutport Lib "AXL.dll" (ByVal lLinkNo As Integer, ByRef lpDstModuleNo As Integer, ByRef upDstBitOffset As Integer, ByRef lpSrcModuleNo As Integer, ByRef upSrcBitOffset As Integer, ByRef upSrcDataBitLength As Integer, ByRef upSrcPortType As Integer) As Integer
    Public Declare Function AxdoLinkResetOutport Lib "AXL.dll" (ByVal lLinkNo As Integer) As Integer

    Public Declare Function AxdoInterLockSetOutport Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lInterLockNo As Integer, ByVal lDstModuleNo As Integer, ByVal uDstBitOffset As Integer, ByVal lSrcModuleNo As Integer, ByVal uSrcBitOffset As Integer, ByVal uSrcPortType As Integer, ByVal uSrcCondition As Integer, ByVal uOutputMode As Integer, ByVal uOutputModeData As Integer) As Integer
    Public Declare Function AxdoInterLockGetOutport Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lInterLockNo As Integer, ByRef lpDstModuleNo As Integer, ByRef upDstBitOffset As Integer, ByRef lpSrcModuleNo As Integer, ByRef upSrcBitOffset As Integer, ByRef upSrcPortType As Integer, ByRef upSrcCondition As Integer, ByRef upOutputMode As Integer, ByRef upOutputModeData As Integer) As Integer
    Public Declare Function AxdoInterLockIsEnabled Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lInterLockNo As Integer, ByRef upEnabled As Integer) As Integer
    Public Declare Function AxdoInterLockResetOutport Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lInterLockNo As Integer) As Integer


End Module
